--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,37 @@
 <resources>
     <string name="app_name">StoryApps</string>
 
-    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
-    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
-    <string name="title_menu_3">Code Review dari Developer Expert</string>
-    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
-    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
-    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
-    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>
-    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
-    <string name="learn_now">Belajar Sekarang</string>
+    <string name="title_menu_1">Global Industry Standard Curriculum</string>
+    <string name="title_menu_2">Flexible Learning According to Your Schedule</string>
+    <string name="title_menu_3">Code Review from Expert Developers</string>
+    <string name="title_menu_4">Trusted Alumni in Various Companies</string>
+    <string name="desc_menu_1">The curriculum is developed together with companies and world technology owners according to the latest industry needs.</string>
+    <string name="desc_menu_2">Learn anytime, anywhere, independently. Freely choose classes according to your learning interests. Lifetime access to classes and discussion forums after graduation.</string>
+    <string name="desc_menu_3">Validate your skills through 1-on-1 Professional Code Review provided directly by Expert Developers.</string>
+    <string name="desc_menu_4">Certificates that prove fundamental knowledge and real skills desired by global companies.</string>
+    <string name="learn_now">Learn Now!</string>
 
-    <string name="signup">Daftar</string>
-    <string name="login">Masuk</string>
-    <string name="message_welcome_page">StoryApps dibuat untuk memenuhi submission dengan didukung oleh Dicoding API</string>
-    <string name="title_welcome_page">Selamat datang di StoryApps!</string>
-    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
+    <string name="signup">Register</string>
+    <string name="login">Login</string>
+    <string name="message_welcome_page">StoryApps was created to fulfill submission supported by Dicoding API</string>
+    <string name="title_welcome_page">Welcome to StoryApps!</string>
+    <string name="title_signup_page">Complete your data below</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="message_login_page">Sebelum itu, login dulu yuk!</string>
-    <string name="title_login_page">Sudah siap untuk mendengar cerita pelajar Dicoding?</string>
-    <string name="name">Nama</string>
-    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
-    <string name="greeting">Halo %1$s,</string>
-    <string name="logout">Keluar</string>
+    <string name="message_login_page">Before that, please login first!</string>
+    <string name="title_login_page">Ready to hear the stories of Dicoding students?</string>
+    <string name="name">Name</string>
+    <string name="message_main_page">Welcome to Dicoding!</string>
+    <string name="greeting">Hello %1$s,</string>
+    <string name="logout">Logout</string>
     <string name="gallery">Gallery</string>
     <string name="camera">Camera</string>
     <string name="upload_story">Upload Story</string>
 
-    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
+    <string name="empty_image_warning">Please insert an image file first.</string>
+    <string name="deskripsi">Description</string>
+    <string name="title_detail">Title</string>
+    <string name="description_detail">Description</string>
+    <string name="back_detail">Back</string>
+    <string name="main_header">Dicoding Stories</string>
 </resources>
