add paging3 network

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -57,4 +57,6 @@
     <string name="satellite_type">Satelit</string>
     <string name="terrain_type">Medan</string>
     <string name="hybrid_type">Gabungan</string>
+
+    <string name="retry">Coba lagi!</string>
 </resources>
