add upload location

--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -59,4 +59,6 @@
     <string name="hybrid_type">Gabungan</string>
 
     <string name="retry">Coba lagi!</string>
+    <string name="show_your_upload_location">Perlihatkan lokasi upload anda</string>
+    <string name="upload_location">Lokasi Upload: </string>
 </resources>
