--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="hybrid_type">Hybrid</string>
 
     <string name="retry">Try again!</string>
+    <string name="show_your_upload_location">Show your Upload Location</string>
+    <string name="upload_location">Upload Location :</string>
 </resources>
